--- a/new.html
+++ b/new.html
@@ -15,7 +15,7 @@
 	<nav class="menu-nav">
 		<ul>
 			<li class="btn">
-				<a href="#">
+				<a href="index.html">
 					Accueil
 				</a>
 			</li>
