--- a/new.html
+++ b/new.html
@@ -12,6 +12,9 @@
 		<h4>
 			Notre site est  maintenant en ligne !!
 		</h4>
+		<h4>
+			Le sites est en developpement ??
+		</h4>
 	<nav class="menu-nav">
 		<ul>
 			<li class="btn">
