--- a/new.html
+++ b/new.html
@@ -13,7 +13,7 @@
 			Notre site est  maintenant en ligne !!
 		</h4>
 		<h4>
-			Le sites est en developpement ??
+			Le sites est en developpement  sniff  :(
 		</h4>
 	<nav class="menu-nav">
 		<ul>
