--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		 <meta charset="utf-8">
 		 <title>FireFox</title>
 		 <link rel="stylesheet" href="css/style.css">
-		 <link rel="shortcut icon" type="image/png" href="/favicon.png">
+		 <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 </head>
 <body>
 
