--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		 <title>FireFox</title>
 		 <link rel="stylesheet" href="css/style.css">
 		 <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
+		 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+		 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 
