--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 	<h2>
 		Veuillez nous contactez a l'adresse : laminedu5@gmail.com
 	</h2>
+	<a href="mailto:laminedu5@gmail.com?subject=Support Contact FireFox">Cliquez ici pour nous envoyer un e-mail !</a>
 	<nav class="menu-nav">
 		<ul>
 			<li class="btn">
