--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				</a>
 			</li>
 			<li class="btn">
-				<a href="contact.html">
+				<a href="contact.html"" target="_blank">
 					Contact
 				</a>
 			</li>
