--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<nav class="menu-nav">
 		<ul>
 			<li class="btn">
-				<a href="#">
+				<a href="gamerwarrior15.github.io">
 					Accueil
 				</a>
 			</li>
