--- a/forum.html
+++ b/forum.html
@@ -36,8 +36,8 @@
                 </td>
                     <tr />
                 <td height="1000" width="1100" bgcolor="lightgrey">
-                        <iframe src="http://fireferox.free-bb.fr/" height="99%" width="99%"></iframe>
-                </td>
+                        <iframe src="http://fireferox.free-bb.fr/sujet-671918-829915-114883-1-Yooo-Et-Bienvenue.html" height="99%" width="99%"></iframe>
+               </td>
         </div align="center">
     </body>
 </html>
