--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 		 <meta charset="utf-8">
-		 <title>FireFox</title>
+		 <title>MiddleWeb</title>
 		 <link rel="stylesheet" href="css/style.css">
 		 <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 		 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
