--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
 		</ul>
 	</nav>
 	<h2>
-		Veuillez nous contactez a l'adresse : laminedu5@gmail.com
+		Veuillez nous contactez a l'adresse suivant : Sera Disponible Plus Tard
 	</h2>
-	<a href="mailto:laminedu5@gmail.com?subject=Support Contact FireFox">Cliquez ici pour nous envoyer un e-mail !</a>
+	<a href="mailto:adressemail.com?subject=Support Contact FireFox">Cliquez ici pour nous envoyer un e-mail !</a>
 </body>
 </html>
