--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
 		 <meta charset="utf-8">
 		 <title>MiddleWeb</title>
 		 <link rel="stylesheet" href="css/style.css">
-		 <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 		 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-		 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 
 	<!-- Haut De Page -->
 	<header>
 		<p>
-			Entrer dans l'univers de la  programation
+			Bienvenue Sur MiddleWeb !
 		</p>
 	</header>
 	<!-- Menu de Navigation -->
@@ -48,39 +46,40 @@
 	<div id="content">
 	
 		<div class="leftbox">
-			
 			<div class="annonce">
 				<p>
-					Salut
+					06/07/2022
+					Le site est maintenant en developpement
 				</p>
 			</div>
 			<br>
 			<div class="annonce">
-				<p>
-					Salut 2
-				</p>
+				<!-- <p>
+					Salut 2 ctrl+K/U
+				</p> -->
 			</div>
 			<br>
-			<div class="annonce">
+			<!-- <div class="annonce">
 				<p>
-					Salut 3
+					Salut 3 ctrl+K/U
 				</p>
-			</div>
+			</div> -->
+			<iframe scrolling="no" src="Slider Image.html" height="225px" width="60%"></iframe>
 			<br>
 		</div>
 		
 		<div class="rightbox">
 			
-			<h2>Ma derniere videos</h2>		
+			<h2>Boite Lien</h2>		
 			
-			<iframe width="500" height="500" src="https://www.youtube.com/embed/qCy-kHESoHg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="500" height="500" src="lienvideoyoutube" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 		
 	</div>
 	<!-- Pied de Page -->
 	<footer>
 		<p>
-			Copyright &copy; 2021-2022 | laminedu5 | All Right Reserved
+			Copyright &copy; 2021-2022 | Feliox | All Right Reserved
 		</p>
 	</footer>
 	
