--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					Salut 3 ctrl+K/U
 				</p>
 			</div> -->
-			<iframe scrolling="no" src="Slider Image.html" height="225px" width="60%"></iframe>
+			
 			<br>
 		</div>
 		
@@ -85,6 +85,7 @@
 	
 	
 	</body>
+	<body background="images/image_de_fond.png"></body>
 	</html>
 	
 	
